<resources>
    <string name="app_name">Lab01</string>
    
    <!-- Layout 1 Strings -->
    <string name="linear_layout">Linear Layout</string>
    <string name="android">Android</string>
    <string name="php">PHP</string>
    <string name="sql">SQL</string>
    <string name="python">PYTHON</string>
    
    <!-- Layout 2 Strings -->
    <string name="linear_layout_kpt">Linear Layout KPT</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    
    <!-- Layout 3 Strings -->
    <string name="demo_application">Demo Application</string>
    <string name="sign_in_form">Sign In Form</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_account_yet">Not account yet? Create one</string>
    <string name="sign_in">SIGN IN</string>
    
    <!-- Layout 4 Strings -->
    <string name="english_change">English + Change</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_facebook">Sign Up for Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    
    <!-- Layout 5 Strings -->
    <string name="instagram">Instagram</string>
    <string name="log_in_lower">Log In</string>
    <string name="forgot_login_details">Forgot your login details? Get help signing in.</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="dont_have_account">Don\'t have an account? Sign up.</string>
    
    <!-- Navigation Strings -->
    <string name="layout_demos">Layout Demos</string>
    <string name="layout1_button">Layout 1: Color Blocks</string>
    <string name="layout2_button">Layout 2: Numbered Grid</string>
    <string name="layout3_button">Layout 3: Demo Sign-In</string>
    <string name="layout4_button">Layout 4: Facebook Sign-In</string>
    <string name="layout5_button">Layout 5: Instagram Sign-In</string>
</resources>