<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/purple"
        android:text="@string/linear_layout"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp" />

    <!-- Android Block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:text="@string/android"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp" />

    <!-- PHP Block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cyan"
        android:text="@string/php"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp" />

    <!-- SQL Block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/teal"
        android:text="@string/sql"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp" />

    <!-- PYTHON Block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:text="@string/python"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp" />

</LinearLayout>